# fincal

./: README.md  pyproject.toml
.github/workflows/: build-wheels.yml
src/: gui.py  simulator.py  utils.py
tests/: test_smoke.py
